qt6/network/gen_qlocalsocket.nim


proc fcQLocalSocket_new(): ptr cQLocalSocket {.importc: "QLocalSocket_new".}
proc fcQLocalSocket_new2(parent: pointer): ptr cQLocalSocket {.importc: "QLocalSocket_new2".}
proc fcQLocalSocket_metaObject(self: pointer, ): pointer {.importc: "QLocalSocket_metaObject".}
proc fcQLocalSocket_metacast(self: pointer, param1: cstring): pointer {.importc: "QLocalSocket_metacast".}
proc fcQLocalSocket_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QLocalSocket_metacall".}
proc fcQLocalSocket_tr(s: cstring): struct_miqt_string {.importc: "QLocalSocket_tr".}
proc fcQLocalSocket_connectToServer(self: pointer, ): void {.importc: "QLocalSocket_connectToServer".}
proc fcQLocalSocket_connectToServerWithName(self: pointer, name: struct_miqt_string): void {.importc: "QLocalSocket_connectToServerWithName".}
proc fcQLocalSocket_disconnectFromServer(self: pointer, ): void {.importc: "QLocalSocket_disconnectFromServer".}
proc fcQLocalSocket_setServerName(self: pointer, name: struct_miqt_string): void {.importc: "QLocalSocket_setServerName".}
proc fcQLocalSocket_serverName(self: pointer, ): struct_miqt_string {.importc: "QLocalSocket_serverName".}
proc fcQLocalSocket_fullServerName(self: pointer, ): struct_miqt_string {.importc: "QLocalSocket_fullServerName".}
proc fcQLocalSocket_abort(self: pointer, ): void {.importc: "QLocalSocket_abort".}
proc fcQLocalSocket_isSequential(self: pointer, ): bool {.importc: "QLocalSocket_isSequential".}
proc fcQLocalSocket_bytesAvailable(self: pointer, ): clonglong {.importc: "QLocalSocket_bytesAvailable".}
proc fcQLocalSocket_bytesToWrite(self: pointer, ): clonglong {.importc: "QLocalSocket_bytesToWrite".}
proc fcQLocalSocket_canReadLine(self: pointer, ): bool {.importc: "QLocalSocket_canReadLine".}
proc fcQLocalSocket_open(self: pointer, openMode: cint): bool {.importc: "QLocalSocket_open".}
proc fcQLocalSocket_close(self: pointer, ): void {.importc: "QLocalSocket_close".}
proc fcQLocalSocket_error(self: pointer, ): cint {.importc: "QLocalSocket_error".}
proc fcQLocalSocket_flush(self: pointer, ): bool {.importc: "QLocalSocket_flush".}
proc fcQLocalSocket_isValid(self: pointer, ): bool {.importc: "QLocalSocket_isValid".}
proc fcQLocalSocket_readBufferSize(self: pointer, ): clonglong {.importc: "QLocalSocket_readBufferSize".}
proc fcQLocalSocket_setReadBufferSize(self: pointer, size: clonglong): void {.importc: "QLocalSocket_setReadBufferSize".}
proc fcQLocalSocket_setSocketDescriptor(self: pointer, socketDescriptor: uint): bool {.importc: "QLocalSocket_setSocketDescriptor".}
proc fcQLocalSocket_socketDescriptor(self: pointer, ): uint {.importc: "QLocalSocket_socketDescriptor".}
proc fcQLocalSocket_setSocketOptions(self: pointer, option: cint): void {.importc: "QLocalSocket_setSocketOptions".}
proc fcQLocalSocket_socketOptions(self: pointer, ): cint {.importc: "QLocalSocket_socketOptions".}
proc fcQLocalSocket_state(self: pointer, ): cint {.importc: "QLocalSocket_state".}
proc fcQLocalSocket_waitForBytesWritten(self: pointer, msecs: cint): bool {.importc: "QLocalSocket_waitForBytesWritten".}
proc fcQLocalSocket_waitForConnected(self: pointer, ): bool {.importc: "QLocalSocket_waitForConnected".}
proc fcQLocalSocket_waitForDisconnected(self: pointer, ): bool {.importc: "QLocalSocket_waitForDisconnected".}
proc fcQLocalSocket_waitForReadyRead(self: pointer, msecs: cint): bool {.importc: "QLocalSocket_waitForReadyRead".}
proc fcQLocalSocket_connected(self: pointer, ): void {.importc: "QLocalSocket_connected".}
proc fQLocalSocket_connect_connected(self: pointer, slot: int) {.importc: "QLocalSocket_connect_connected".}
proc fcQLocalSocket_disconnected(self: pointer, ): void {.importc: "QLocalSocket_disconnected".}
proc fQLocalSocket_connect_disconnected(self: pointer, slot: int) {.importc: "QLocalSocket_connect_disconnected".}
proc fcQLocalSocket_errorOccurred(self: pointer, socketError: cint): void {.importc: "QLocalSocket_errorOccurred".}
proc fQLocalSocket_connect_errorOccurred(self: pointer, slot: int) {.importc: "QLocalSocket_connect_errorOccurred".}
proc fcQLocalSocket_stateChanged(self: pointer, socketState: cint): void {.importc: "QLocalSocket_stateChanged".}
proc fQLocalSocket_connect_stateChanged(self: pointer, slot: int) {.importc: "QLocalSocket_connect_stateChanged".}
proc fcQLocalSocket_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QLocalSocket_tr2".}
proc fcQLocalSocket_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QLocalSocket_tr3".}
proc fcQLocalSocket_connectToServer1(self: pointer, openMode: cint): void {.importc: "QLocalSocket_connectToServer1".}
proc fcQLocalSocket_connectToServer2(self: pointer, name: struct_miqt_string, openMode: cint): void {.importc: "QLocalSocket_connectToServer2".}
proc fcQLocalSocket_setSocketDescriptor2(self: pointer, socketDescriptor: uint, socketState: cint): bool {.importc: "QLocalSocket_setSocketDescriptor2".}
proc fcQLocalSocket_setSocketDescriptor3(self: pointer, socketDescriptor: uint, socketState: cint, openMode: cint): bool {.importc: "QLocalSocket_setSocketDescriptor3".}
proc fcQLocalSocket_waitForConnected1(self: pointer, msecs: cint): bool {.importc: "QLocalSocket_waitForConnected1".}
proc fcQLocalSocket_waitForDisconnected1(self: pointer, msecs: cint): bool {.importc: "QLocalSocket_waitForDisconnected1".}
proc fQLocalSocket_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QLocalSocket_virtualbase_metacall".}
proc fcQLocalSocket_override_virtual_metacall(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_metacall".}
proc fQLocalSocket_virtualbase_isSequential(self: pointer, ): bool{.importc: "QLocalSocket_virtualbase_isSequential".}
proc fcQLocalSocket_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_isSequential".}
proc fQLocalSocket_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QLocalSocket_virtualbase_bytesAvailable".}
proc fcQLocalSocket_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_bytesAvailable".}
proc fQLocalSocket_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QLocalSocket_virtualbase_bytesToWrite".}
proc fcQLocalSocket_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_bytesToWrite".}
proc fQLocalSocket_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QLocalSocket_virtualbase_canReadLine".}
proc fcQLocalSocket_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_canReadLine".}
proc fQLocalSocket_virtualbase_open(self: pointer, openMode: cint): bool{.importc: "QLocalSocket_virtualbase_open".}
proc fcQLocalSocket_override_virtual_open(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_open".}
proc fQLocalSocket_virtualbase_close(self: pointer, ): void{.importc: "QLocalSocket_virtualbase_close".}
proc fcQLocalSocket_override_virtual_close(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_close".}
proc fQLocalSocket_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QLocalSocket_virtualbase_waitForBytesWritten".}
proc fcQLocalSocket_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_waitForBytesWritten".}
proc fQLocalSocket_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QLocalSocket_virtualbase_waitForReadyRead".}
proc fcQLocalSocket_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_waitForReadyRead".}
proc fQLocalSocket_virtualbase_readData(self: pointer, param1: cstring, param2: clonglong): clonglong{.importc: "QLocalSocket_virtualbase_readData".}
proc fcQLocalSocket_override_virtual_readData(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_readData".}
proc fQLocalSocket_virtualbase_readLineData(self: pointer, data: cstring, maxSize: clonglong): clonglong{.importc: "QLocalSocket_virtualbase_readLineData".}
proc fcQLocalSocket_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_readLineData".}
proc fQLocalSocket_virtualbase_skipData(self: pointer, maxSize: clonglong): clonglong{.importc: "QLocalSocket_virtualbase_skipData".}
proc fcQLocalSocket_override_virtual_skipData(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_skipData".}
proc fQLocalSocket_virtualbase_writeData(self: pointer, param1: cstring, param2: clonglong): clonglong{.importc: "QLocalSocket_virtualbase_writeData".}
proc fcQLocalSocket_override_virtual_writeData(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_writeData".}
proc fQLocalSocket_virtualbase_pos(self: pointer, ): clonglong{.importc: "QLocalSocket_virtualbase_pos".}
proc fcQLocalSocket_override_virtual_pos(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_pos".}
proc fQLocalSocket_virtualbase_size(self: pointer, ): clonglong{.importc: "QLocalSocket_virtualbase_size".}
proc fcQLocalSocket_override_virtual_size(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_size".}
proc fQLocalSocket_virtualbase_seek(self: pointer, pos: clonglong): bool{.importc: "QLocalSocket_virtualbase_seek".}
proc fcQLocalSocket_override_virtual_seek(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_seek".}
proc fQLocalSocket_virtualbase_atEnd(self: pointer, ): bool{.importc: "QLocalSocket_virtualbase_atEnd".}
proc fcQLocalSocket_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_atEnd".}
proc fQLocalSocket_virtualbase_reset(self: pointer, ): bool{.importc: "QLocalSocket_virtualbase_reset".}
proc fcQLocalSocket_override_virtual_reset(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_reset".}
proc fQLocalSocket_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QLocalSocket_virtualbase_event".}
proc fcQLocalSocket_override_virtual_event(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_event".}
proc fQLocalSocket_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QLocalSocket_virtualbase_eventFilter".}
proc fcQLocalSocket_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_eventFilter".}
proc fQLocalSocket_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QLocalSocket_virtualbase_timerEvent".}
proc fcQLocalSocket_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_timerEvent".}
proc fQLocalSocket_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QLocalSocket_virtualbase_childEvent".}
proc fcQLocalSocket_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_childEvent".}
proc fQLocalSocket_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QLocalSocket_virtualbase_customEvent".}
proc fcQLocalSocket_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_customEvent".}
proc fQLocalSocket_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QLocalSocket_virtualbase_connectNotify".}
proc fcQLocalSocket_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_connectNotify".}
proc fQLocalSocket_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QLocalSocket_virtualbase_disconnectNotify".}
proc fcQLocalSocket_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QLocalSocket_override_virtual_disconnectNotify".}
proc fcQLocalSocket_staticMetaObject(): pointer {.importc: "QLocalSocket_staticMetaObject".}
proc fcQLocalSocket_delete(self: pointer) {.importc: "QLocalSocket_delete".}

